[project]
name = "2025-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
